fix ghosting on Safari(IOS)

--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,18 @@
     box-sizing: border-box;
 }
 
-html, body {
-    width: 100%;
-    height:100%;
-  }
-
 body {
     font-family: 'Nunito', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url(background.jpg);
+    background-image: url(img/background.jpg);
     background-color: rgba(255, 255, 255, 0.5); 
     background-blend-mode: lighten; 
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: -webkit-fill-available;
     background-size: 400% 400%;
     overflow: hidden;
 }
@@ -35,6 +30,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-left: 3em;
     margin-right: 3em;
+    will-change: contents, transform;
 }
 
 h3, text {
